<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9ED9EE"
    android:foregroundTint="#FFFFFF"
    android:gravity="top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:background="#9ED9EE"
        android:gravity="center"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="132dp"
            android:layout_height="129dp"
            android:background="@drawable/imageformat"
            android:src="@mipmap/logo_app" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#9ED9EE"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:gravity="left"
                android:text="@string/usuario"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:gravity="left"
                android:text="@string/juan_reyes"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#9ED9EE"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:gravity="left"
                android:text="@string/edad"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:gravity="left"
                android:text="@string/_32_anios"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#9ED9EE"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:gravity="left"
                android:text="@string/correo_electronico"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:gravity="left"
                android:text="@string/juan_reyes_mymail_com"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="#55808080"
                android:src="@drawable/baseline_account_circle_24" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:text="@string/cuenta"
                android:textColor="#007BFF"
                android:textSize="10sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/notification_on_blue" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:text="@string/alarmas"
                android:textColor="#007BFF"
                android:textSize="10sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/menu_mas_blue" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:text="@string/mas"
                android:textColor="#007BFF"
                android:textSize="10sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>