<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9ED9EE"
    android:foregroundTint="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="132dp"
        android:layout_height="129dp"
        android:background="@drawable/imageformat"
        android:src="@mipmap/logo_app" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#9ED9EE"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/card_alarm_format"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:gravity="center"
                android:text="@string/ver_video_tutorial"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#9ED9EE"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/card_alarm_format"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="201dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:gravity="center"
                android:text="@string/acerca_de_la_app"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#FFFFFF"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                tools:src="@drawable/baseline_account_circle_24" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:text="@string/cuenta"
                android:textColor="#007BFF"
                android:textSize="10sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                tools:src="@drawable/notification_on_blue" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:text="@string/alarmas"
                android:textColor="#007BFF"
                android:textSize="10sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="#55808080"
                android:layout_weight="1"
                tools:src="@drawable/menu_mas_blue" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:text="@string/mas"
                android:textColor="#007BFF"
                android:textSize="10sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>