<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9ED9EE"
    android:foregroundTint="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="26dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="132dp"
        android:layout_height="129dp"
        android:background="@drawable/imageformat"
        android:src="@mipmap/logo_app" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="26dp" />
    <Switch
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:checked="true"
        android:text="Switch" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#9ED9EE"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="arial"
            android:gravity="left"
            android:text="@string/hora_inicio"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="arial"
            android:gravity="left"
            android:text="@string/_8_00_am"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#9ED9EE"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="arial"
            android:gravity="left"
            android:text="@string/hora_final"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="arial"
            android:gravity="left"
            android:text="@string/_6_00_p_m"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#9ED9EE"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >
        <Space
            android:layout_width="6dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="17sp"
            android:background="@drawable/unselected_week_day"
            android:text="D" />
        <Space
            android:layout_width="6dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="17sp"
            android:background="@drawable/formfield"
            android:text="L" />
        <Space
            android:layout_width="6dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="17sp"
            android:background="@drawable/formfield"
            android:text="M" />
        <Space
            android:layout_width="6dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="17sp"
            android:background="@drawable/formfield"
            android:text="X" />
        <Space
            android:layout_width="6dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="17sp"
            android:background="@drawable/formfield"
            android:text="J" />
        <Space
            android:layout_width="6dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="17sp"
            android:background="@drawable/formfield"
            android:text="V" />
        <Space
            android:layout_width="6dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/button7"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="17sp"
            android:background="@drawable/unselected_week_day"
            android:text="S" />
        <Space
            android:layout_width="6dp"
            android:layout_height="match_parent" />
    </LinearLayout>


    <ImageView
        android:id="@+id/imageViewMap"
        android:layout_width="332dp"
        android:layout_height="212dp"
        android:background="@drawable/imageformat"
        android:src="@mipmap/mapa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#FFFFFF"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="#55808080"
                android:layout_weight="1"
                android:src="@drawable/baseline_account_circle_24" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:text="@string/cuenta"
                android:textColor="#007BFF"
                android:textSize="10sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/notification_on_blue" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:text="@string/alarmas"
                android:textColor="#007BFF"
                android:textSize="10sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/menu_mas_blue" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="arial"
                android:text="@string/mas"
                android:textColor="#007BFF"
                android:textSize="10sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Switch" />


</LinearLayout>